--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  /* background: url("background.jpg"); */
-  background-color: rgb(164, 162, 162);
+  background: url("background.jpg");
+  background-color: rgb(231, 176, 176);
   height: 100vh;
   display: flex;
   justify-content: flex-start;
@@ -140,7 +140,7 @@ select {
 }
 
 .widget-container {
-  background: rgb(182, 182, 209);
+  background: rgb(188, 188, 195);
   box-shadow: 0 8px 32px 0 rgb(55, 54, 54);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
